lab8: add logger